<resources>
    <string name="app_name">Animal Place</string>
    <string name="btn_aceptar">ACEPTAR</string>
    <!-- ASDDAS -->
    <string name="lbl_saludar">HOLAAAAAAS!!</string>
    <string name="nombreapp">Animal Place</string>
    <string name="plh_usuario">Ingrese su usuario</string>
    <string name="plh_pass">Ingrese su contraseña</string>

    <string name="lbl_usuario">USUARIO :</string>
    <string name="lbl_pass">CONTRASEÑA :</string>

    <string name="a_registro">REGISTRATE </string>

    <string name="btn_ingresar">INICIAR SESIÓN</string>


    <string name="lbl_alfab">abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQURSTUVWXYZ</string>
    <string name="lbl_num">1234567890</string>
    <string name="lbl_float">1234567890.,</string>
    <string name="lbl_fecha">1234567890/</string>
    <string name="lbl_emailre">Correo Electronico:</string>
    <string name="plh_email">Ingrese su correo electronico</string>
    <string name="lbl_pass2">Contraseña:</string>
    <string name="plh_contraseña">Ingrese la contraseña</string>
    <string name="lbl_firstname">Nombre:</string>
    <string name="plh_name">Ingrese su nombre</string>
    <string name="lbl_lastname">Apellido:</string>
    <string name="plh_lastname">Ingrese su apellido</string>
    <string name="lbl_cedula">Cédula:</string>
    <string name="plh_cedula">Ingrese su cédula</string>
    <string name="btn_registro">Registrarte</string>


</resources>
