<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF0F3"
    android:backgroundTint="#EAF6F6"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_marginLeft="20px"
        android:layout_marginTop="50px"
        android:layout_marginRight="20px"
        android:layout_marginBottom="70px"
        android:background="@drawable/top_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            app:srcCompat="@drawable/logo_circle" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="504dp">


        <androidx.cardview.widget.CardView
            android:layout_width="305dp"
            android:layout_height="421dp"
            android:layout_marginTop="-10dp"
            app:cardBackgroundColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.559">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="305dp"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="204dp"
                    android:layout_height="23dp"
                    android:layout_marginTop="212dp"
                    android:text="@string/lbl_emailre"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.277"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="231dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="276dp"
                    android:text="@string/lbl_pass2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.391"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="178dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="76dp"
                    android:text="@string/lbl_firstname"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.228"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_pass"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="240dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="300dp"
                    android:ems="10"
                    android:hint="@string/plh_contraseña"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#810C0C0C"
                    android:textSize="16sp"
                    android:theme="@style/HintStyle"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.461"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="241dp"
                    android:layout_height="53dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#3F51B5"
                    android:onClick="IraLogin"
                    android:text="@string/btn_registro"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.484"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.956" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="212dp"
                    android:layout_height="28dp"
                    android:text="@string/lbl_lastname"
                    android:textColor="#0C0C0C"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.311"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.374" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="239dp"
                    android:layout_height="39dp"
                    android:ems="10"
                    android:hint="@string/plh_lastname"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#810C0C0C"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.454"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.442" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="68dp"
                    android:layout_height="31dp"
                    android:text="@string/lbl_cedula"
                    android:textColor="#050505"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.122"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.041" />

                <EditText
                    android:id="@+id/editTextNumberSigned"
                    android:layout_width="243dp"
                    android:layout_height="37dp"
                    android:ems="10"
                    android:hint="@string/plh_cedula"
                    android:inputType="numberSigned"
                    android:textColor="#000000"
                    android:textColorHint="#810C0C0C"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.467"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.101" />

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="240dp"
                    android:layout_height="37dp"
                    android:layout_marginBottom="188dp"
                    android:ems="10"
                    android:hint="@string/plh_name"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textColorHint="#810C0C0C"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.446"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.569" />

                <EditText
                    android:id="@+id/emailre"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="241dp"
                    android:layout_height="38dp"
                    android:ems="10"
                    android:hint="@string/plh_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textColorHighlight="#810C0C0C"
                    android:textColorHint="#810C0C0C"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.437"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.613" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:text="CREAR CUENTA"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
