<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C164A"
    android:backgroundTint="#E4F7F8"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_marginLeft="20px"
        android:layout_marginTop="50px"
        android:layout_marginRight="20px"
        android:layout_marginBottom="70px"
        android:background="@drawable/top_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            app:srcCompat="@drawable/logo_circle" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="505dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="314dp"
            android:layout_height="331dp"
            android:layout_marginTop="-10dp"
            app:cardBackgroundColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.461">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="274dp"
                    android:layout_height="29dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lbl_usuario"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/et_usuario"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.465"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_usuario"
                    style="@style/EditTextStyle"
                    android:layout_width="270dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="8dp"
                    android:autoText="false"
                    android:ems="10"
                    android:hint="@string/plh_usuario"
                    android:inputType="textPersonName"
                    android:singleLine="false"
                    android:theme="@style/HintStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="284dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="124dp"
                    android:text="@string/lbl_pass"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_pass"
                    style="@style/EditTextStyle"
                    android:layout_width="271dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="156dp"
                    android:ems="10"
                    android:hint="@string/plh_pass"
                    android:inputType="textPassword"
                    android:theme="@style/HintStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <Button
                    android:id="@+id/button"
                    android:layout_width="127dp"
                    android:layout_height="53dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#3F51B5"
                    android:text="@string/btn_ingresar"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.769" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="138dp"
                    android:layout_height="52dp"
                    android:backgroundTint="#1FD131"
                    android:onClick="IraRegistro"
                    android:text="REGISTRATE"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.877"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.77" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="¿No tienes una cuenta?"
                    android:textColor="#0B0B0B"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/button2"
                    app:layout_constraintHorizontal_bias="0.576"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:layout_constraintVertical_bias="0.239" />

                <TextView
                    android:id="@+id/registrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="IraRecuperar"
                    android:text="@string/a_registro"

                    android:textAlignment="textEnd"
                    android:textColor="#00E91E63"
                    tools:layout_editor_absoluteY="310dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="287dp"
            android:layout_height="64dp"
            android:text="ANIMAL PLACE VETERINARY CLINIC"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="54dp"
            android:layout_height="57dp"
            android:onClick="IraIg"
            android:src="@drawable/instag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.944" />

        <ImageView
            android:id="@+id/imagfb"
            android:layout_width="54dp"
            android:layout_height="57dp"
            android:onClick="IraFb"
            android:src="@drawable/face"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.366"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.944" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
